--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3001
-MongoDB_URI=
-CLOUD_NAME=
-CLOUD_API_KEY=
-CLOUD_API_SECRET=
+MongoDB_URI=mongodb://127.0.0.1:27017/styleSync
+CLOUD_NAME=duj1x15vh
+CLOUD_API_KEY=937881669988337
+CLOUD_API_SECRET=lE8rnzuZfmErnbYhVe4PGXFrlD0
 
 
 
